fix bug causing the sidebar to overlap the footer by increasing the z-index to 900 which is more than the 300 that the menu was set with

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,6 @@ h1,h2,h3,h4,h5,h6,
   display: inline-block;
 }
 
-
 .bar-menu-mobile .dropdown, .bar-menu-mobile .dropdown > a {
   text-align: center;
 }
@@ -138,6 +137,7 @@ h1,h2,h3,h4,h5,h6,
 
 .bar-footer {
   position: fixed;
+  z-index: 900;
   bottom: 0;
   background-color: rgba(0,0,0,0.7);
   color: white;
